made the navbar better

--- a/BlazorApp2/wwwroot/Index.html
+++ b/BlazorApp2/wwwroot/Index.html
@@ -116,7 +116,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="Index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="about.html">CHARACTERS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
@@ -180,7 +180,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 John Doe. All rights reserved.</p>
+        <p>&copy; 2024 Sumah. All rights reserved.</p>
     </footer>
 </body>
 
